[package]
name = "rs-ocid-axum"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
tower = "0.4"
openidconnect = { version = "3.4", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5" # 用于并发安全的 State/PKCE 存储
async-trait = "0.1"
thiserror = "1"